# THTTS

./: Dockerfile  LICENSE  README.md  entrypoint.sh  pyproject.toml
.github/workflows/: docker.yml
src/: wyoming_thai_f5.py  wyoming_thai_vits.py
src/util/: cleantext.py  custom_infer.py  ipa.py
src/util/raw_dict/: __init__.py  number.py  word.py
