[project]
name = "thtts"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cached-path",
    "f5-tts",
    "omegaconf",
    "pythainlp>=5.1.2",
    "torch>=2.8.0",
    "torchaudio",
    "transformers>=4.55.2",
    "uvloop>=0.21.0",
    "wyoming>=1.7.2",
]
