[project]
name = "thtts"
version = "0.1.0"
description = "tts via wyoming for Thai"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cached-path",
    "f5-tts",
    "langdetect>=1.0.9",
    "numpy>=1.26.4",
    "phonemizer>=3.3.0",
    "pythainlp>=5.1.2",
    "python-crfsuite>=0.9.11",
    "ssg>=0.0.8",
    "syllapy>=0.7.2",
    "tltk>=1.9.1",
    "torch>=2.8.0",
    "torchaudio",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "uvloop>=0.21.0",
    "wyoming>=1.7.2",
]
